beginning the dom.js file

--- a/public/index.html
+++ b/public/index.html
@@ -21,12 +21,12 @@
         <label for="brave">Brave</label>
         <input type="radio" name="courage" value="brave" id="brave">
         <label for="cowardly">Cowardly</label>
-        <input type="radio" name="courage" value="cowardly" id="cowardly"> 
+        <input type="radio" name="courage" value="cowardly" id="cowardly">
         <label for="magical">Magical</label>
         <input type="radio" name="wizardry" value="magical" id="magical">
         <label for="muggle">Muggle</label>
         <input type="radio" name="wizardry" value="muggle" id="muggle">
-        <input type="submit" value="Generate Glan">
+        <input class="form__submit" type="submit" value="Generate Glan">
       </form>
     </section>
     <script src="dom.js"></script>
