--- a/public/index.html
+++ b/public/index.html
@@ -31,5 +31,6 @@
       </form>
     </section>
     <script src="public/dom.js"></script>
+    <script src="public/fetch.js"></script>
   </body>
 </html>
