selecting radio buttons > created listOfCategories which holds all our radioButtons > managed to show on console the correct binary for the correct radio button

--- a/public/index.html
+++ b/public/index.html
@@ -16,19 +16,19 @@
         <label for="membername">Warrior Name: </label>
         <input class="form__input" type= "text" id="membername" /></br>
         <label for="wise">Wise</label>
-        <input type="radio" name="wisdom" value="1" id="wise">
+        <input type="radio" class="radioButton" name="wisdom" value="1" id="wise">
         <label for="foolish">Foolish</label>
-        <input type="radio" name="wisdom" value="0" id="foolish">
+        <input type="radio" class="radioButton" name="wisdom" value="0" id="foolish">
         <label for="brave">Brave</label>
-        <input type="radio" name="courage" value="1" id="brave">
+        <input type="radio" class="radioButton" name="courage" value="1" id="brave">
         <label for="cowardly">Cowardly</label>
-        <input type="radio" name="courage" value="0" id="cowardly">
+        <input type="radio" class="radioButton" name="courage" value="0" id="cowardly">
         <label for="magical">Magical</label>
-        <input type="radio" name="wizardry" value="1" id="magical">
+        <input type="radio" class="radioButton" name="wizardry" value="1" id="magical">
         <label for="muggle">Muggle</label>
-        <input type="radio" name="wizardry" value="0" id="muggle">
-        <input class="form__submit" type="submit" value="Generate Glan">
+        <input type="radio" class="radioButton" name="wizardry" value="0" id="muggle">
       </form>
+      <button class="form__submit" id="submit__button">Generate Glan</button>
     </section>
     <script src="public/dom.js"></script>
     <script src="public/fetch.js"></script>
