--- a/public/index.html
+++ b/public/index.html
@@ -14,17 +14,17 @@
     <section class="form">
       <form class="form__body" >
         <label for="membername">Warrior Name: </label>
-        <input class="form__input" type= "text" id="membername" /></br>
+        <input class="form__input" type= "text" id="membername" required/></br>
         <label for="wise">Wise</label>
-        <input type="radio" class="radioButton" name="wisdom" value="1" id="wise">
+        <input type="radio" class="radioButton" name="wisdom" value="1" id="wise" required>
         <label for="foolish">Foolish</label>
         <input type="radio" class="radioButton" name="wisdom" value="0" id="foolish">
         <label for="brave">Brave</label>
-        <input type="radio" class="radioButton" name="courage" value="1" id="brave">
+        <input type="radio" class="radioButton" name="courage" value="1" id="brave" required>
         <label for="cowardly">Cowardly</label>
         <input type="radio" class="radioButton" name="courage" value="0" id="cowardly">
         <label for="magical">Magical</label>
-        <input type="radio" class="radioButton" name="wizardry" value="1" id="magical">
+        <input type="radio" class="radioButton" name="wizardry" value="1" id="magical" required>
         <label for="muggle">Muggle</label>
         <input type="radio" class="radioButton" name="wizardry" value="0" id="muggle">
       </form>
