fixed backend query

--- a/public/index.html
+++ b/public/index.html
@@ -29,8 +29,8 @@
         <input type="radio" class="radioButton" name="wizardry" value="0" id="muggle">
       </form>
       <button class="form__submit" id="submit__button">Generate Glan</button>
+      <button id="getGlan">What's my Glan?</button>
     </section>
-    <script src="public/dom.js"></script>
     <script src="public/fetch.js"></script>
   </body>
 </html>
