--- a/public/index.html
+++ b/public/index.html
@@ -1,36 +1,48 @@
 <!DOCTYPE html>
-<html lang="en-gb">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="public/style.css" />
-    <link rel="shortcut icon" type="image/icon" href="public/favicon.ico"/>
-    <title>Glash of Glans</title>
-  </head>
-  <body>
-    <header><h1>Welcome to the Glash of the Glans</h1></header>
 
-    <section class="form">
-      <form class="form__body" >
-        <label for="membername">Warrior Name: </label>
-        <input class="form__input" type= "text" id="membername" required/></br>
-        <label for="wise">Wise</label>
-        <input type="radio" class="radioButton" name="wisdom" value="1" id="wise" required>
-        <label for="foolish">Foolish</label>
-        <input type="radio" class="radioButton" name="wisdom" value="0" id="foolish">
-        <label for="brave">Brave</label>
-        <input type="radio" class="radioButton" name="courage" value="1" id="brave" required>
-        <label for="cowardly">Cowardly</label>
-        <input type="radio" class="radioButton" name="courage" value="0" id="cowardly">
-        <label for="magical">Magical</label>
-        <input type="radio" class="radioButton" name="wizardry" value="1" id="magical" required>
-        <label for="muggle">Muggle</label>
-        <input type="radio" class="radioButton" name="wizardry" value="0" id="muggle">
-      </form>
-      <button class="form__submit" id="submit__button">Generate Glan</button>
-      <button id="getGlan">What's my Glan?</button>
-    </section>
-    <script src="public/fetch.js"></script>
-  </body>
+<html lang="en-gb">
+<head>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta http-equiv="X-UA-Compatible" content="ie=edge" />
+<link rel="stylesheet" href="public/style.css" />
+<link rel="shortcut icon" type="image/icon" href="public/favicon.ico"/>
+<link href="https://fonts.googleapis.com/css?family=Bungee|Bungee+Shade|Roboto&display=swap" rel="stylesheet">
+<title>Glash of Glans</title>
+</head>
+<body>
+  
+<header class="header">
+<h1>Welcome <br> to the Glash <br> of the Glans</h1>
+</header>
+
+<section class="form">
+<form class="form__body">
+<label for="membername">Warrior Name: </label>
+<input class="form__input" type= "text" id="membername" /></br>
+
+<div class="lines">
+<label for="wise">Wise</label>
+<input type="radio" class="radioButton" name="wisdom" value="1" id="wise">
+<label for="foolish">Foolish</label>
+<input type="radio" class="radioButton" name="wisdom" value="0" id="foolish">
+</div>
+<div class="lines">
+<label for="brave">Brave</label>
+<input type="radio" class="radioButton" name="courage" value="1" id="brave">
+<label for="cowardly">Cowardly</label>
+<input type="radio" class="radioButton" name="courage" value="0" id="cowardly">
+</div>
+<div class="lines">
+<label for="magical">Magical</label>
+<input type="radio" class="radioButton" name="wizardry" value="1" id="magical">
+<label for="muggle">Muggle</label>
+<input type="radio" class="radioButton" name="wizardry" value="0" id="muggle">
+</div>
+</form>
+<button class="form__submit" id="submit__button">Generate Glan</button>
+</section>
+
+<script src="public/fetch.js"></script>
+</body>
 </html>
