fix bugs introduced by previous commit

--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,7 @@
 </div>
 </form>
 <button class="form__submit" id="submit__button">Generate Glan</button>
+<button class="form__submit" id="getGlan">What's my Glan?</button>
 </section>
 
 <script src="public/fetch.js"></script>
